# AionUi-Enchanced

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  package.json  vitest.config.ts
.claude/skills/bump-version/: SKILL.md
.github/workflows/: _build-reusable.yml  build-and-release.yml  pack-web-cli.yml  pr-checks.yml
docs/backend-migration/handoffs/: M2-outcome.md  M3-outcome.md  M4-outcome.md  M5-outcome.md  M6-outcome.md  M7-outcome.md  M8-outcome.md  M9-outcome.md  ci-web-cli-release-outcome.md
docs/backend-migration/plans/: 2026-05-07-m1-monorepo-skeleton.md  2026-05-07-m2-aionrs-cleanup-requirements.md  2026-05-07-m3-web-host-skeleton-requirements.md  2026-05-07-m4-backend-launcher-migration-requirements.md  2026-05-07-m4-backend-launcher-migration.md  2026-05-07-m5-static-server-auth-migration-requirements.md  2026-05-07-m5-static-server-auth-migration.md  2026-05-07-m6-three-paths-cutover-requirements.md  2026-05-07-m6-three-paths-cutover.md  2026-05-07-m7-prepare-backend-ci-requirements.md  2026-05-07-m7-prepare-backend-ci.md  2026-05-07-m8-web-cli-tarball-requirements.md  2026-05-07-m8-web-cli-tarball.md  2026-05-07-m9-install-web-script-requirements.md  2026-05-07-m9-install-web-script.md  2026-05-07-webui-decouple-electron-design.md  2026-05-07-webui-decouple-team-playbook.md  2026-05-07-webui-decouple-teammate-cheatsheet.md  2026-05-08-ci-web-cli-release-integration.md
docs/backend-migration/webui/: WebUI-Configuration-Guide.md  WebUI-Configuration-Guide.zh.md
docs/conventions/: file-structure.md
docs/specs/: ylagents-os-development-plan-v2.md
scripts/: build-with-builder.js  create-mock-release-artifacts.sh  install-web.sh  pack-web-cli.js  prepare-release-assets.sh  prepareAionuiBackend.js  resetpass.ts  resolveBackendVersion.js  smoke-test-install-web.sh  smoke-test-web-cli.sh  verify-release-assets.sh  webui.ts
tests/e2e/: README.md
tests/e2e/docs/chat-aionrs/: requirements.zh.md  test-cases.zh.md
tests/e2e/features/assistants-user-data/: assistant-user-data.e2e.ts
tests/e2e/features/builtin-skill-migration/: builtin-skill-migration.e2e.ts
tests/e2e/features/previews/: preview-panel.e2e.ts
tests/e2e/helpers/: httpBridge.ts
tests/e2e/helpers/bridge/: invoke.ts  routes.ts
tests/e2e/specs/: team-describe-assistant.e2e.ts
tests/integration/: i18n.test.ts  migrateAssistants.realFixture.test.ts
tests/unit/: cssThemePresets.test.ts  previewFileWatch.dom.test.ts
tests/unit/common/: navigationHistoryContext.dom.test.tsx
tests/unit/platform/: inlinePlatformServices.test.ts
tests/unit/process/: opencodeMcpAgent.test.ts
tests/unit/renderer/components/: AionModal.dom.test.tsx
ylagents-os/: Cargo.toml  package.json  tsconfig.json
ylagents-os/apps/desktop/: package.json
ylagents-os/apps/mobile-desktop/: README.md  capacitor.config.ts  package.json
ylagents-os/apps/mobile-desktop/src/plugins/: CorePlugin.ts
ylagents-os/patches/: 7zip-bin@5.2.0.patch
