[workspace]
resolver = "3"
members = [
    "packages/core-rs/crates/aionui-assets",
    "packages/core-rs/crates/aionui-common",
    "packages/core-rs/crates/aionui-db",
    "packages/core-rs/crates/aionui-api-types",
    "packages/core-rs/crates/aionui-realtime",
    "packages/core-rs/crates/aionui-runtime",
    "packages/core-rs/crates/aionui-auth",
    "packages/core-rs/crates/aionui-system",
    "packages/core-rs/crates/aionui-file",
    "packages/core-rs/crates/aionui-office",
    "packages/core-rs/crates/aionui-shell",
    "packages/core-rs/crates/aionui-ai-agent",
    "packages/core-rs/crates/aionui-mcp",
    "packages/core-rs/crates/aionui-conversation",
    "packages/core-rs/crates/aionui-extension",
    "packages/core-rs/crates/aionui-channel",
    "packages/core-rs/crates/aionui-team-prompts",
    "packages/core-rs/crates/aionui-team",
    "packages/core-rs/crates/aionui-cron",
    "packages/core-rs/crates/aionui-assistant",
    "packages/core-rs/crates/aionui-app", "packages/core-rs/crates/aionui-embedded",
]

[workspace.package]
version = "0.1.36"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
aionui-common = { path = "packages/core-rs/crates/aionui-common" }
aionui-assets = { path = "packages/core-rs/crates/aionui-assets" }
aionui-db = { path = "packages/core-rs/crates/aionui-db" }
aionui-api-types = { path = "packages/core-rs/crates/aionui-api-types" }
aionui-realtime = { path = "packages/core-rs/crates/aionui-realtime" }
aionui-runtime = { path = "packages/core-rs/crates/aionui-runtime" }
aionui-auth = { path = "packages/core-rs/crates/aionui-auth" }
aionui-system = { path = "packages/core-rs/crates/aionui-system" }
aionui-file = { path = "packages/core-rs/crates/aionui-file" }
aionui-office = { path = "packages/core-rs/crates/aionui-office" }
aionui-shell = { path = "packages/core-rs/crates/aionui-shell" }
aionui-ai-agent = { path = "packages/core-rs/crates/aionui-ai-agent" }
aionui-mcp = { path = "packages/core-rs/crates/aionui-mcp" }
aionui-conversation = { path = "packages/core-rs/crates/aionui-conversation" }
aionui-extension = { path = "packages/core-rs/crates/aionui-extension" }
aionui-channel = { path = "packages/core-rs/crates/aionui-channel" }
aionui-team-prompts = { path = "packages/core-rs/crates/aionui-team-prompts" }
aionui-team = { path = "packages/core-rs/crates/aionui-team" }
aionui-cron = { path = "packages/core-rs/crates/aionui-cron" }
aionui-assistant = { path = "packages/core-rs/crates/aionui-assistant" }
aionui-app = { path = "packages/core-rs/crates/aionui-app" }

aion-agent = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }
aion-providers = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }
aion-types = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }
aion-protocol = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }
aion-config = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }
aion-mcp = { git = "https://github.com/iOfficeAI/aionrs.git", tag = "v0.1.32" }

# Core framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = "0.3"

# Async trait (dyn-compatible async traits)
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth / Crypto
jsonwebtoken = "9"
bcrypt = "0.17"
aes-gcm = "0.10"

# UUID
uuid = { version = "1", features = ["v7"] }

# HTTP client — use rustls with native roots to align backend trust with the host system.
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }

# Concurrency
dashmap = "6"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Protobuf
prost = "0.13"

# Semver
semver = "1"

# Directories
dirs = "6"

# Regex
regex = "1"

# File system
include_dir = "0.7"
notify = "8"
walkdir = "2"
ignore = "0.4"
zip = "2"
git2 = { version = "0.20", default-features = false }
mime_guess = "2"
rust-embed = "8"

# Runtime embedding
fs2 = "0.4"
zstd = "0.13"

# Cron
cron = "0.15"
chrono = "0.4"
chrono-tz = "0.10"

# Shell
open = "5"
which = "7"

# Office
calamine = "0.26"
rust_xlsxwriter = "0.82"
sha1 = "0.10"
sha2 = "0.10"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }

# TLS
rustls = "0.23"
rustls-native-certs = "0.8"

# Pin rustls-webpki to fix RUSTSEC-2026-{0098,0099,0104}
rustls-webpki = "0.103.13"

# OAuth / MCP
oauth2 = "5.0.0-rc.1"
toml = "0.8"

# Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Encoding
base64 = "0.22"

# HTTP body utilities (testing)
http-body-util = "0.1"

# Testing
tempfile = "3"
wiremock = "0.6"

# Random
getrandom = "0.2"
hex = "0.4"
libc = "0.2"

# Shrink target/debug: minimal debuginfo, sidecar files, no incremental cache.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false
